terraform/vpc.tf
resource "aws_vpc" "eks_vpc" {
  cidr_block           = var.vpc_block
  enable_dns_hostnames = true
  enable_dns_support   = true
  tags                 = {
    Name = var.vpc_name
  }
}
